including proper files that will be needed for build.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,7 @@
 include LICENSE.txt
 include README.rst
 include builder.py
+include libs/liburing/configure
+include libs/liburing/src/include/liburing.h
+include libs/liburing/src/include/liburing/barrier.h
+include libs/liburing/src/include/liburing/io_uring.h
