--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,9 @@
 include LICENSE.txt
 include README.rst
 include builder.py
+include libs/liburing/LICENSE
 include libs/liburing/configure
 include libs/liburing/src/include/liburing.h
 include libs/liburing/src/include/liburing/barrier.h
 include libs/liburing/src/include/liburing/io_uring.h
+exclude libs/liburing/src/include/liburing/compat.h
