--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      # Update references
+      - name: Git Submodule Update
+        run: |
+          git pull --recurse-submodules
       # Runners
       - name: Install dependencies
         run: |
