--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Git Submodule Update
         run: |
           git pull --recurse-submodules
+          git submodule update --remote --recursive
       # Runners
       - name: Install dependencies
         run: |
