--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       # Runners
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip pytest
+          python -m pip install --upgrade pip flake8 pytest
           python -m pip install --upgrade .
       - name: Lint with flake8
         run: |
