--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,8 @@ jobs:
       # Runners
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip flake8 pytest
-          python -m pip install --upgrade .
+          python3 -m pip install --upgrade pip flake8 pytest
+          python3 -m pip install --upgrade .
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
@@ -36,4 +36,4 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with PyTest
         run: |
-          python -m pytest
+          python3 -m pytest test
