--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip flake8 pytest
           python3 -m pip -vvvv install --upgrade .
+          ls -alFR
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
