setup: don't install cython created `*.c` files into `site-packages` its not needed & not readable!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,10 +42,13 @@ version = {attr="liburing.__version__"}
 [tool.setuptools.package-data]
 "*" = ["*.pyx", "*.pxd"]
 
+[tool.setuptools.exclude-package-data]
+"*" = ["*.c"]
+
 [tool.setuptools.packages.find]
-where = ["src/"]
+where = ["src"]
 namespaces = false
 
+# for debugging locally
 # [tool.pytest.ini_options]
 # pythonpath = ["src"]
-
