--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,7 +16,7 @@ include libs/liburing/src/include/liburing/io_uring.h
 exclude libs/liburing/src/include/liburing/io_uring_version.h
 exclude libs/liburing/src/include/liburing/compat.h
 
-graft liburing
+graft src/liburing
 graft example
 graft test
 
