--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools>=60", "wheel", "cython>=3"]
 build-backend = "setuptools.build_meta"
+requires = ["setuptools>=60", "wheel", "cython>=3"]
 
 [project]
 name = "liburing"
@@ -20,7 +20,7 @@ classifiers = ["Topic :: Software Development",
                "Programming Language :: Python :: 3.10",
                "Programming Language :: Python :: 3.11",
                "Programming Language :: Python :: 3.12",
-               "Development Status :: 2 - Pre-Alpha"]
+               "Development Status :: 3 - Alpha"]
                # 1 - Planning
                # 2 - Pre-Alpha
                # 3 - Alpha
@@ -36,20 +36,14 @@ Issues = "https://github.com/YoSTEALTH/Liburing/issues"
 [project.optional-dependencies]
 test = ["pytest"]
 
-[tool.setuptools]
-zip-safe = false
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.setuptools.dynamic]
 version = {attr="liburing.__version__"}
 
 [tool.setuptools.package-data]
-"*" = ["*.pyx", "*.pxd"]
-
-[tool.setuptools.exclude-package-data]
-"*" = ["*.c"]
-
-[tool.setuptools.packages.find]
-where = ["src"]
+"*" = ["*.pyx", "*.pxd", "*.h"]
 
 # for debugging locally
 # ---------------------
