--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,7 @@ version = {attr="liburing.__version__"}
 [tool.setuptools.package-data]
 "*" = ["*.pyx", "*.pxd", "*.h"]
 
-# for debugging locally
-# ---------------------
+# for debugging locally START >>>
 # [tool.pytest.ini_options]
 # pythonpath = ["src"]
 
@@ -59,3 +58,8 @@ version = {attr="liburing.__version__"}
 #     "memory_error\\(self\\)",
 #     "index_error\\(self, index, '.*'\\)"
 # ]
+
+[tool.cython-lint]
+max-line-length = 100
+ignore = ['E221', 'E222']
+# for debugging locally END <<<
